# abyss

./: .gitignore  .imake  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: tests.yml
snakypy/abyss/: __init__.py  __main__.py  cli.py
snakypy/abyss/config/: __init__.py
snakypy/abyss/kit/: encfs.py
snakypy/abyss/toolkit/: encfs.py  shred.py
snakypy/abyss/utils/: __init__.py  base.py  functools.py  menu.py
tests/: test_abyss.py
